# Medical_Inventory_App

./: Readme.md  app.py  auth.py  database.py  email_service.py  pyproject.toml  utils.py
pages/: admin_dashboard.py  alerts.py  audit_trail.py  barcode_scanner.py  bulk_import.py  document_upload.py  employee_dashboard.py  inventory_management.py  reports.py
